Fix for awkward wrap on ie/edge contact form solution.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2214,8 +2214,9 @@ ul.children .comment-content {
 
 .message_now_area > div {
     width: 40%;
-    min-width: 300px;
-    max-width: 450px;
+    margin: 0 auto;
+    min-width: 450px;
+    max-width: 600px;
 }
 
 .message_now_area .section_heading>p {
